<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">sum calculator</string>
    <string name="Welcome">Welcome! This is calculator</string>
    <string name="start_btn">Start Calculator</string>
    <string name="num1" tools:ignore="Typos">2</string>
    <string name="num2">2</string>
    <string name="submit">calculate</string>
    <string name="check_txt">Click On calculate Button To Calculate</string>
    <string name="sum">sum</string>
    <string name="Sub">Subtraction</string>
    <string name="mul">Multiplication</string>
    <string name="Div">Divide</string>
</resources>